# calculate-dynamic-password

./: Cargo.toml  LICENSE  README.md  install_ubuntu_service.sh  uninstall_ubuntu_service.sh
.github/workflows/: release.yml
src/: main.rs
static/: index.html  login.html
