[package]
name = "calculate-dynamic-password"
version = "0.1.0"
edition = "2024"
authors = ["Rayyi-Tech"]

[dependencies]
actix-web = "4.14"
tokio = { version = "1.53", features = ["full"] }
chrono = "0.4"
sha2 = "0.11"
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.9", features = ["v4"] }
